translation-tool/inputs/source_meta/objects/Hsvc_AccountTransaction_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will Store the Account Status along with the Asset Status Reason Code.</description>
    <fields>
        <fullName>Hsvc_Applicable_Country_Code__c</fullName>
        <label>Applicable Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRetentionFeeNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRetentionFeeNeeded</label>
        <type>Checkbox</type>
    </fields>
    <label>AccountTransaction Config</label>
    <listViews>
        <fullName>All_records</fullName>
        <columns>NAME</columns>
        <columns>isRetentionFeeNeeded__c</columns>
        <columns>Hsvc_Applicable_Country_Code__c</columns>
        <columns>IsDefault__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
        <language>en_US</language>
    </listViews>
</CustomObject>